# nayru

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  package.json
crates/nayru-app/: Cargo.toml  build.rs  tauri.conf.json
crates/nayru-app/capabilities/: default.json
crates/nayru-app/icons/: icon.icns
crates/nayru-app/src/: commands.rs  lib.rs  main.rs  state.rs  tracker.rs
crates/nayru-cli/: Cargo.toml
crates/nayru-cli/src/: main.rs
crates/nayru-core/: Cargo.toml
crates/nayru-core/src/: lib.rs  text_prep.rs  types.rs  wav.rs
crates/nayru-lib/: Cargo.toml
crates/nayru-lib/src/: capture.rs  download.rs  kokoro.rs  lib.rs  manager.rs  server.rs  streaming_source.rs  stt.rs  tts.rs
nayru-app/: next.config.mjs  package.json  tailwind.config.ts
nayru-app/app/: layout.tsx  providers.tsx
nayru-app/app/(reader)/: page.tsx
nayru-app/app/settings/: page.tsx
nayru-app/components/: background-opacity-sync.tsx  theme-sync.tsx  transparency-detector.tsx
nayru-app/components/layouts/: content-wrapper.tsx
nayru-app/components/layouts/sidebar/: icons.tsx  index.tsx  menu-item.tsx  sidebar-context.tsx
nayru-app/components/reader/: playback-bar.tsx  sentence-display.tsx  speed-control.tsx  text-editor.tsx
nayru-app/css/: satoshi.css  style.css
nayru-app/hooks/: use-reader-status.ts  use-server-startup.ts
nayru-app/lib/: sentences.ts  tts-ipc.ts
nayru-app/lib/stores/: config-store.ts  reader-store.ts
src/: download.rs  lib.rs  main.rs  manager.rs  server.rs  stt.rs  text_prep.rs  tts.rs
src/nayru-app/.next/: trace
