[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Lucas <lucas@amio.dev>"]
license = "MIT"
repository = "https://github.com/ln64-git/nayru"

[workspace.dependencies]
# Internal
nayru-core = { path = "crates/nayru-core" }
nayru-lib = { path = "crates/nayru-lib" }

# Async
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Audio
cpal = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures-util = "0.3"

# TTS playback
rodio = { version = "0.20", default-features = false, features = ["wav"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Text processing
regex = "1"

# Desktop app
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
