[package]
name = "nayru-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Nayru — TTS reader desktop application"

[lib]
name = "nayru_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "nayru-app"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
nayru-core.workspace = true
nayru-lib.workspace = true
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
