[package]
name = "nayru-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for nayru voice server"

[[bin]]
name = "nayru"
path = "src/main.rs"

[dependencies]
nayru-lib.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
